Fixing harmony variable typo

--- a/test/geoloco/Geoloco_Regression.ipynb
+++ b/test/geoloco/Geoloco_Regression.ipynb
@@ -269,7 +269,7 @@
     "    \n",
     "    remove_results_files()\n",
     "else:\n",
-    "    print(f'Geoloco is not configured for this environment: \"{harnomy_environment}\" - skipping test.')"
+    "    print(f'Geoloco is not configured for this environment: \"{harmony_environment}\" - skipping test.')"
    ]
   },
   {
@@ -343,7 +343,7 @@
     "    \n",
     "    remove_results_files()\n",
     "else:\n",
-    "    print(f'Geoloco is not configured for this environment: \"{harnomy_environment}\" - skipping test.')"
+    "    print(f'Geoloco is not configured for this environment: \"{harmony_environment}\" - skipping test.')"
    ]
   },
   {
@@ -414,7 +414,7 @@
     "    \n",
     "    remove_results_files()\n",
     "else:\n",
-    "    print(f'Geoloco is not configured for this environment: \"{harnomy_environment}\" - skipping test.')"
+    "    print(f'Geoloco is not configured for this environment: \"{harmony_environment}\" - skipping test.')"
    ]
   },
   {
