Changing truth_data to reference_data

--- a/test/geoloco/Geoloco_Regression.ipynb
+++ b/test/geoloco/Geoloco_Regression.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# LAADS DAAC Geoloco Regression Tests\n",
     "\n",
-    "This notebook contains contains a suite of regression tests against LAADS DAAC Geoloco Harmony Service against truth data generated on premises. \n",
+    "This notebook contains contains a suite of regression tests against LAADS DAAC Geoloco Harmony Service against reference data generated on premises. \n",
     "\n",
     "Geoloco ideally operates on Levels 3 & 4 data. Level 1B and 2 data can be operated, but the outputs will be automatically reprojected to `Geographic` and regridded to its raster resolution if no `proj4` string is supplied. \n",
     "\n",
@@ -150,17 +150,17 @@
     "                   'MOD35_L2': 'Cloud_Mask_1.hdf',\n",
     "                   'MOD08_D3': 'Aerosol_Optical_Depth_Land_Ocean_Mean.hdf'}\n",
     "\n",
-    "reprojection_truth_data = {'MOD021KM': 'truth_data/MOD021KM.A2023001.0020.061.psrpcs_001678984001.EV_1KM_RefSB_1.hdf',\n",
-    "                           'MOD35_L2': 'truth_data/MOD35_L2.A2023001.0020.061.psrpcs_001678984540.Cloud_Mask_1.hdf',\n",
-    "                           'MOD08_D3': 'truth_data/MOD08_D3.A2023001.061.psrpcs_001678986883.Aerosol_Optical_Depth_Land_Ocean_Mean.hdf'}\n",
+    "reprojection_reference_data = {'MOD021KM': 'reference_data/MOD021KM.A2023001.0020.061.psrpcs_001678984001.EV_1KM_RefSB_1.hdf',\n",
+    "                           'MOD35_L2': 'reference_data/MOD35_L2.A2023001.0020.061.psrpcs_001678984540.Cloud_Mask_1.hdf',\n",
+    "                           'MOD08_D3': 'reference_data/MOD08_D3.A2023001.061.psrpcs_001678986883.Aerosol_Optical_Depth_Land_Ocean_Mean.hdf'}\n",
     "\n",
-    "regridding_truth_data = {'MOD021KM': 'truth_data/MOD021KM.A2023001.0020.061.psrpcs_001679406616.EV_1KM_RefSB_1.hdf',\n",
-    "                         'MOD35_L2': 'truth_data/MOD35_L2.A2023001.0020.061.psrpcs_001700084418.Cloud_Mask_1.hdf',\n",
-    "                         'MOD08_D3': 'truth_data/MOD08_D3.A2023001.061.psrpcs_001679410851.Aerosol_Optical_Depth_Land_Ocean_Mean.hdf'}\n",
+    "regridding_reference_data = {'MOD021KM': 'reference_data/MOD021KM.A2023001.0020.061.psrpcs_001679406616.EV_1KM_RefSB_1.hdf',\n",
+    "                         'MOD35_L2': 'reference_data/MOD35_L2.A2023001.0020.061.psrpcs_001700084418.Cloud_Mask_1.hdf',\n",
+    "                         'MOD08_D3': 'reference_data/MOD08_D3.A2023001.061.psrpcs_001679410851.Aerosol_Optical_Depth_Land_Ocean_Mean.hdf'}\n",
     "\n",
-    "resampling_truth_data = {'MOD021KM': 'truth_data/MOD021KM.A2023001.0020.061.psrpcs_001679674560.EV_1KM_RefSB_1.hdf',\n",
-    "                         'MOD35_L2': 'truth_data/MOD35_L2.A2023001.0020.061.psrpcs_001679677203.Cloud_Mask_1.hdf',\n",
-    "                         'MOD08_D3': 'truth_data/MOD08_D3.A2023001.061.psrpcs_001679677149.Aerosol_Optical_Depth_Land_Ocean_Mean.hdf'}"
+    "resampling_reference_data = {'MOD021KM': 'reference_data/MOD021KM.A2023001.0020.061.psrpcs_001679674560.EV_1KM_RefSB_1.hdf',\n",
+    "                         'MOD35_L2': 'reference_data/MOD35_L2.A2023001.0020.061.psrpcs_001679677203.Cloud_Mask_1.hdf',\n",
+    "                         'MOD08_D3': 'reference_data/MOD08_D3.A2023001.061.psrpcs_001679677149.Aerosol_Optical_Depth_Land_Ocean_Mean.hdf'}"
    ]
   },
   {
@@ -211,7 +211,7 @@
    "source": [
     "## Reprojection Regression Tests\n",
     "\n",
-    "In the cell below, reprojection is tested using a UTM `proj4` string for the Level 1B, Level 2 and Level 3 Collections/Granules. Outputs are considerably reduced using variable subsetting. Dimension sizes are checked between the truth data and the output data."
+    "In the cell below, reprojection is tested using a UTM `proj4` string for the Level 1B, Level 2 and Level 3 Collections/Granules. Outputs are considerably reduced using variable subsetting. Dimension sizes are checked between the reference data and the output data."
    ]
   },
   {
@@ -246,21 +246,21 @@
     "\n",
     "    geoloco_reprojection_tests = 1\n",
     "    \n",
-    "    mod021km_truth_dims = get_dim_sizes(reprojection_truth_data['MOD021KM'])\n",
+    "    mod021km_reference_dims = get_dim_sizes(reprojection_reference_data['MOD021KM'])\n",
     "    mod021km_dims = get_dim_sizes(mod021km_reprojection_compare_file)\n",
-    "    if mod021km_truth_dims != mod021km_dims:\n",
+    "    if mod021km_reference_dims != mod021km_dims:\n",
     "        print_error('MOD021KM Reprojection mismatch.')\n",
     "        geoloco_reprojection_tests = 0\n",
     "    \n",
-    "    mod35l2_truth_dims = get_dim_sizes(reprojection_truth_data['MOD35_L2'])\n",
+    "    mod35l2_reference_dims = get_dim_sizes(reprojection_reference_data['MOD35_L2'])\n",
     "    mod35l2_dims = get_dim_sizes(mod35l2_reprojection_compare_file)\n",
-    "    if mod35l2_truth_dims != mod35l2_dims:\n",
+    "    if mod35l2_reference_dims != mod35l2_dims:\n",
     "        print_error('MOD35_L2 Reprojection mismatch.')\n",
     "        geoloco_reprojection_tests = 0\n",
     "\n",
-    "    mod08d3_truth_dims = get_dim_sizes(reprojection_truth_data['MOD08_D3'])\n",
+    "    mod08d3_reference_dims = get_dim_sizes(reprojection_reference_data['MOD08_D3'])\n",
     "    mod08d3_dims = get_dim_sizes(mod08d3_reprojection_compare_file)\n",
-    "    if mod08d3_truth_dims != mod08d3_dims:\n",
+    "    if mod08d3_reference_dims != mod08d3_dims:\n",
     "        print_error('MOD08_D3 Reprojection file mismatch.')\n",
     "        geoloco_reprojection_tests = 0\n",
     "\n",
@@ -279,7 +279,7 @@
    "source": [
     "## Regridding Regression Tests\n",
     "\n",
-    "In the cell below, regridding is tested using a GEO `proj4` string for the Level 1B, Level 2 and Level 3 Collections/Granules and reprojection scale sizes. Outputs are considerably reduced using variable subsetting. Dimension sizes are checked between the truth data and the output data."
+    "In the cell below, regridding is tested using a GEO `proj4` string for the Level 1B, Level 2 and Level 3 Collections/Granules and reprojection scale sizes. Outputs are considerably reduced using variable subsetting. Dimension sizes are checked between the reference data and the output data."
    ]
   },
   {
@@ -320,21 +320,21 @@
     "\n",
     "    geoloco_regridding_tests = 1\n",
     "    \n",
-    "    mod021km_regridding_truth_dims = get_dim_sizes(regridding_truth_data['MOD021KM'])\n",
+    "    mod021km_regridding_reference_dims = get_dim_sizes(regridding_reference_data['MOD021KM'])\n",
     "    mod021km_regridding_dims = get_dim_sizes(mod021km_regridding_compare_file)\n",
-    "    if mod021km_regridding_truth_dims != mod021km_regridding_dims:\n",
+    "    if mod021km_regridding_reference_dims != mod021km_regridding_dims:\n",
     "        print_error('MOD021KM Regridding mismatch.')\n",
     "        geoloco_regridding_tests = 0\n",
     "    \n",
-    "    mod35l2_regridding_truth_dims = get_dim_sizes(regridding_truth_data['MOD35_L2'])\n",
+    "    mod35l2_regridding_reference_dims = get_dim_sizes(regridding_reference_data['MOD35_L2'])\n",
     "    mod35l2_regridding_dims = get_dim_sizes(mod35l2_regridding_compare_file)\n",
-    "    if mod35l2_regridding_truth_dims != mod35l2_regridding_dims:\n",
+    "    if mod35l2_regridding_reference_dims != mod35l2_regridding_dims:\n",
     "        print_error('MOD35_L2 Regridding mismatch.')\n",
     "        geoloco_regridding_tests = 0\n",
     "\n",
-    "    mod08d3_regridding_truth_dims = get_dim_sizes(regridding_truth_data['MOD08_D3'])\n",
+    "    mod08d3_regridding_reference_dims = get_dim_sizes(regridding_reference_data['MOD08_D3'])\n",
     "    mod08d3_regridding_dims = get_dim_sizes(mod08d3_regridding_compare_file)\n",
-    "    if mod08d3_regridding_truth_dims != mod08d3_regridding_dims:\n",
+    "    if mod08d3_regridding_reference_dims != mod08d3_regridding_dims:\n",
     "        print_error('MOD08_D3 Regridding file mismatch.')\n",
     "        geoloco_regridding_tests = 0\n",
     "\n",
@@ -353,7 +353,7 @@
    "source": [
     "## Resampling Regression Tests\n",
     "\n",
-    "In the cell below, regridding is tested using a GEO `proj4` string for the Level 1B, Level 2 and Level 3 Collections/Granules and repsampling string. Outputs are considerably reduced using variable subsetting. Dimension sizes are checked between the truth data and the output data."
+    "In the cell below, regridding is tested using a GEO `proj4` string for the Level 1B, Level 2 and Level 3 Collections/Granules and repsampling string. Outputs are considerably reduced using variable subsetting. Dimension sizes are checked between the reference data and the output data."
    ]
   },
   {
@@ -391,21 +391,21 @@
     "\n",
     "    geoloco_resampling_tests = 1\n",
     "    \n",
-    "    mod021km_resampling_truth_dims = get_dim_sizes(resampling_truth_data['MOD021KM'])\n",
+    "    mod021km_resampling_reference_dims = get_dim_sizes(resampling_reference_data['MOD021KM'])\n",
     "    mod021km_resampling_dims = get_dim_sizes(mod021km_resampling_compare_file)\n",
-    "    if mod021km_resampling_truth_dims != mod021km_resampling_dims:\n",
+    "    if mod021km_resampling_reference_dims != mod021km_resampling_dims:\n",
     "        print_error('MOD021KM Resampling mismatch.')\n",
     "        geoloco_resampling_tests = 0\n",
     "    \n",
-    "    mod35l2_resampling_truth_dims = get_dim_sizes(resampling_truth_data['MOD35_L2'])\n",
+    "    mod35l2_resampling_reference_dims = get_dim_sizes(resampling_reference_data['MOD35_L2'])\n",
     "    mod35l2_resampling_dims = get_dim_sizes(mod35l2_resampling_compare_file)\n",
-    "    if mod35l2_resampling_truth_dims != mod35l2_resampling_dims:\n",
+    "    if mod35l2_resampling_reference_dims != mod35l2_resampling_dims:\n",
     "        print_error('MOD35_L2 Resampling mismatch.')\n",
     "        geoloco_resampling_tests = 0\n",
     "\n",
-    "    mod08d3_resampling_truth_dims = get_dim_sizes(resampling_truth_data['MOD08_D3'])\n",
+    "    mod08d3_resampling_reference_dims = get_dim_sizes(resampling_reference_data['MOD08_D3'])\n",
     "    mod08d3_resampling_dims = get_dim_sizes(mod08d3_resampling_compare_file)\n",
-    "    if mod08d3_resampling_truth_dims != mod08d3_resampling_dims:\n",
+    "    if mod08d3_resampling_reference_dims != mod08d3_resampling_dims:\n",
     "        print_error('MOD08_D3 Resampling file mismatch.')\n",
     "        geoloco_resampling_tests = 0\n",
     "\n",
