Updates for the latest PR: Commented out code with #'s and comparison functions

--- a/test/geoloco/Geoloco_Regression.ipynb
+++ b/test/geoloco/Geoloco_Regression.ipynb
@@ -34,7 +34,8 @@
     "from harmony import Client, Collection, Environment, Request\n",
     "\n",
     "from utilities import (submit_and_download, get_dim_sizes, get_sds_data,\n",
-    "                       remove_results_files, print_error, print_success)"
+    "                       remove_results_files, print_error, print_success,\n",
+    "                       compare_dimensions, compare_data)"
    ]
   },
   {
@@ -250,66 +251,48 @@
     "    mod35l2_geoloco_info is not None and\n",
     "    mod08d3_geoloco_info is not None):\n",
     "    \n",
-    "    geoloco_tests = 1\n",
+    "    mod021km_test = True\n",
+    "    mod35l2_test = True\n",
+    "    mod08d3_test = True\n",
     "    \n",
-    "    mod021km_reference_dims = get_dim_sizes(reference_data['MOD021KM'])\n",
-    "    mod021km_dims = get_dim_sizes(mod021km_compare_file)\n",
-    "    if mod021km_reference_dims != mod021km_dims:\n",
-    "        \"\"\"if mod021km_reference_dims == mod021km_dims:\n",
-    "        mod021km_reference_data = get_sds_data(reference_data['MOD021KM'])\n",
-    "        mod021km_data = get_sds_data(mod021km_compare_file)\n",
-    "\n",
-    "        for i in range(len(mod021km_reference_data)):\n",
-    "            for j in range(len(mod021km_reference_data[0])):\n",
-    "                if mod021km_reference_data[i][j] != mod021km_data[i][j]:\n",
-    "                    print_error('MOD021KM data mismatch.')\n",
-    "                    geoloco_tests = 0\n",
-    "                    break\n",
+    "    if compare_dimensions(reference_data['MOD021KM'], mod021km_compare_file) == False:\n",
+    "    # Input data is currently outdated on UAT. Will activate when data is updated.\n",
+    "    # if compare_dimensions(reference_data['MOD021KM'], mod021km_compare_file == True:\n",
+    "        # if compare_data(reference_data['MOD021KM'], mod021km_compare_file == False:\n",
+    "        #     print_error('MOD021KM data mismatch.')\n",
+    "        #     mod021km_test = False\n",
     "    \n",
-    "    else:\"\"\"\n",
+    "    # else:\n",
     "        print_error('MOD021KM data dimension mismatch.')\n",
-    "        geoloco_tests = 0\n",
+    "        mod021km_test = False\n",
     "    \n",
-    "    mod35l2_reference_dims = get_dim_sizes(reference_data['MOD35_L2'])\n",
-    "    mod35l2_dims = get_dim_sizes(mod35l2_compare_file)\n",
-    "    if mod35l2_reference_dims != mod35l2_dims:\n",
-    "        \"\"\"if mod35l2_reference_dims == mod35l2_dims:\n",
-    "        mod35l2_reference_data = get_sds_data(reference_data['MOD35_L2'])\n",
-    "        mod35l2_data = get_sds_data(mod35l2_compare_file)\n",
-    "\n",
-    "        for i in range(len(mod35l2_reference_data)):\n",
-    "            #if (geoloco_tests == 0):\n",
-    "            #    break\n",
-    "            for j in range(len(mod35l2_reference_data[0])):\n",
-    "                if mod35l2_reference_data[i][j] != mod35l2_data[i][j]:\n",
-    "                    print_error('MOD35_L2 data mismatch.')\n",
-    "                    print(mod35l2_reference_data[i][j])\n",
-    "                    geoloco_tests = 0\n",
-    "                    break\n",
-    "    else:\"\"\"\n",
+    "    if compare_dimensions(reference_data['MOD35_L2'], mod35l2_compare_file) == False:\n",
+    "    # Input data is currently outdated on UAT. Will activate when data is updated.\n",
+    "    # if compare_dimensions(reference_data['MOD35_L2'], mod35l2_compare_file) == True:\n",
+    "        # if compare_data(reference_data['MOD35_L2'], mod35l2_compare_file) == False:\n",
+    "        #     print_error('MOD35_L2 data mismatch.')\n",
+    "        #     mod35l2_test = False\n",
+    "    \n",
+    "    # else:\n",
     "        print_error('MOD35_L2 data dimension mismatch.')\n",
-    "        geoloco_tests = 0\n",
+    "        mod35l2_test = False\n",
     "    \n",
-    "    mod08d3_reference_dims = get_dim_sizes(reference_data['MOD08_D3'])\n",
-    "    mod08d3_dims = get_dim_sizes(mod08d3_compare_file)\n",
-    "    if mod08d3_reference_dims != mod08d3_dims:\n",
-    "        \"\"\"if mod08d3_reference_dims == mod08d3_dims:\n",
-    "        mod08d3_reference_data = get_sds_data(reference_data['MOD08_D3'])\n",
-    "        mod08d3_data = get_sds_data(mod08d3_compare_file)\n",
-    "\n",
-    "        for i in range(len(mod08d3_reference_data)):\n",
-    "            for j in range(len(mod08d3_reference_data[0])):\n",
-    "                if mod08d3_reference_data[i][j] != mod08d3_data[i][j]:\n",
-    "                    print_error('MOD08_D3 data mismatch.')\n",
-    "                    geoloco_tests = 0\n",
-    "                    break\n",
-    "    else:\"\"\"\n",
+    "    if compare_dimensions(reference_data['MOD08_D3'], mod08d3_compare_file) == False:\n",
+    "    # Input data is currently outdated on UAT. Will activate when data is updated.\n",
+    "    # if compare_dimensions(reference_data['MOD08_D3'], mod08d3_compare_file) == True:\n",
+    "        # if compare_data(reference_data['MOD08_D3'], mod08d3_compare_file) == False:\n",
+    "        #     print_error('MOD08_D3 data mismatch.')\n",
+    "        #     mod08d3_test = False\n",
+    "    \n",
+    "    # else:\n",
     "        print_error('MOD08_D3 data dimension mismatch.')\n",
-    "        geoloco_tests = 0\n",
+    "        mod08d3_test = False\n",
     "\n",
     "    remove_results_files()\n",
     "\n",
-    "    if geoloco_tests == 1:\n",
+    "    geoloco_tests = mod021km_test & mod35l2_test & mod08d3_test\n",
+    "\n",
+    "    if geoloco_tests == True:\n",
     "        print_success('Geoloco Reprojection/Resampling/Regridding requests.')\n",
     "    else:\n",
     "        raise Exception('Geoloco test suite failed')\n",
@@ -317,6 +300,14 @@
     "else:\n",
     "    print(f'Geoloco is not configured for this environment: \"{harmony_environment}\" - skipping test.')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1533cb1-81b9-480c-9f0f-210697483ad5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
