Moving the testing back to one cell

--- a/test/geoloco/Geoloco_Regression.ipynb
+++ b/test/geoloco/Geoloco_Regression.ipynb
@@ -237,20 +237,8 @@
     "\n",
     "    mod021km_compare_file = submit_and_download(harmony_client, mod021km_request, file_indicators['MOD021KM'])\n",
     "    mod35l2_compare_file = submit_and_download(harmony_client, mod35l2_request, file_indicators['MOD35_L2'])\n",
-    "    mod08d3_compare_file = submit_and_download(harmony_client, mod08d3_request, file_indicators['MOD08_D3'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8cb23cdb-3211-49c3-8d98-7351feb35c44",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if (mod021km_geoloco_info is not None and \n",
-    "    mod35l2_geoloco_info is not None and\n",
-    "    mod08d3_geoloco_info is not None):\n",
-    "    \n",
+    "    mod08d3_compare_file = submit_and_download(harmony_client, mod08d3_request, file_indicators['MOD08_D3'])\n",
+    "\n",
     "    mod021km_test = True\n",
     "    mod35l2_test = True\n",
     "    mod08d3_test = True\n",
