Removing bit comparison via ==

--- a/test/geoloco/Geoloco_Regression.ipynb
+++ b/test/geoloco/Geoloco_Regression.ipynb
@@ -243,10 +243,10 @@
     "    mod35l2_test = True\n",
     "    mod08d3_test = True\n",
     "    \n",
-    "    if compare_dimensions(reference_data['MOD021KM'], mod021km_compare_file) == False:\n",
+    "    if not compare_dimensions(reference_data['MOD021KM'], mod021km_compare_file):\n",
     "    # Input data is currently outdated on UAT. Will activate when data is updated.\n",
-    "    # if compare_dimensions(reference_data['MOD021KM'], mod021km_compare_file == True:\n",
-    "        # if compare_data(reference_data['MOD021KM'], mod021km_compare_file == False:\n",
+    "    # if compare_dimensions(reference_data['MOD021KM'], mod021km_compare_file:\n",
+    "        # if not compare_data(reference_data['MOD021KM'], mod021km_compare_file:\n",
     "        #     print_error('MOD021KM data mismatch.')\n",
     "        #     mod021km_test = False\n",
     "    \n",
@@ -254,10 +254,10 @@
     "        print_error('MOD021KM data dimension mismatch.')\n",
     "        mod021km_test = False\n",
     "    \n",
-    "    if compare_dimensions(reference_data['MOD35_L2'], mod35l2_compare_file) == False:\n",
+    "    if not compare_dimensions(reference_data['MOD35_L2'], mod35l2_compare_file):\n",
     "    # Input data is currently outdated on UAT. Will activate when data is updated.\n",
-    "    # if compare_dimensions(reference_data['MOD35_L2'], mod35l2_compare_file) == True:\n",
-    "        # if compare_data(reference_data['MOD35_L2'], mod35l2_compare_file) == False:\n",
+    "    # if compare_dimensions(reference_data['MOD35_L2'], mod35l2_compare_file):\n",
+    "        # if not compare_data(reference_data['MOD35_L2'], mod35l2_compare_file):\n",
     "        #     print_error('MOD35_L2 data mismatch.')\n",
     "        #     mod35l2_test = False\n",
     "    \n",
@@ -265,10 +265,10 @@
     "        print_error('MOD35_L2 data dimension mismatch.')\n",
     "        mod35l2_test = False\n",
     "    \n",
-    "    if compare_dimensions(reference_data['MOD08_D3'], mod08d3_compare_file) == False:\n",
+    "    if not compare_dimensions(reference_data['MOD08_D3'], mod08d3_compare_file):\n",
     "    # Input data is currently outdated on UAT. Will activate when data is updated.\n",
-    "    # if compare_dimensions(reference_data['MOD08_D3'], mod08d3_compare_file) == True:\n",
-    "        # if compare_data(reference_data['MOD08_D3'], mod08d3_compare_file) == False:\n",
+    "    # if compare_dimensions(reference_data['MOD08_D3'], mod08d3_compare_file):\n",
+    "        # if not compare_data(reference_data['MOD08_D3'], mod08d3_compare_file):\n",
     "        #     print_error('MOD08_D3 data mismatch.')\n",
     "        #     mod08d3_test = False\n",
     "    \n",
@@ -280,7 +280,7 @@
     "\n",
     "    geoloco_tests = mod021km_test & mod35l2_test & mod08d3_test\n",
     "\n",
-    "    if geoloco_tests == True:\n",
+    "    if geoloco_tests:\n",
     "        print_success('Geoloco Reprojection/Resampling/Regridding requests.')\n",
     "    else:\n",
     "        raise Exception('Geoloco test suite failed')\n",
