Changing the logic operator

--- a/test/geoloco/Geoloco_Regression.ipynb
+++ b/test/geoloco/Geoloco_Regression.ipynb
@@ -278,7 +278,7 @@
     "\n",
     "    remove_results_files()\n",
     "\n",
-    "    geoloco_tests = mod021km_test & mod35l2_test & mod08d3_test\n",
+    "    geoloco_tests = mod021km_test and mod35l2_test and mod08d3_test\n",
     "\n",
     "    if geoloco_tests:\n",
     "        print_success('Geoloco Reprojection/Resampling/Regridding requests.')\n",
