HARMONY-1649 - Remove no-op Swath Projector request.

--- a/test/swath-projector/SwathProjector_Regression.ipynb
+++ b/test/swath-projector/SwathProjector_Regression.ipynb
@@ -145,30 +145,9 @@
    "source": [
     "### Swath Projector request with defaults:\n",
     "\n",
-    "Make a request that only specifies the collection and an appropriate granule. This should rely on the default target Coordinate Reference System (CRS) and interpolation method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebe08e96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if swath_projector_info is not None:\n",
-    "    defaults_file_name = 'swath_projector_defaults.nc4'\n",
-    "    defaults_request = Request(collection=swath_projector_info['collection'],\n",
-    "                               granule_id=[swath_projector_info['granule_id']])\n",
+    "**This test has been removed.**\n",
     "\n",
-    "    submit_and_download(harmony_client, defaults_request, defaults_file_name)\n",
-    "    assert exists(defaults_file_name), 'Unsuccessful Swath Projector defaults request.'\n",
-    "\n",
-    "    compare_results_to_reference_file(defaults_file_name,\n",
-    "                                      'reference_files/swath_projector_defaults_reference.nc4')\n",
-    "\n",
-    "    print_success('Swath projector with default parameters.')\n",
-    "else:\n",
-    "    print(f'The Swath Projector is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+    "[HARMONY-1649](https://bugs.earthdata.nasa.gov/browse/HARMONY-1649) added a service to Harmony that means transformation services are called if a transformation has been requested in the parameters (e.g., subsetting, reformatting, reprojection). For a request that only specifies the collection and granule, the original download links for the source data are returned."
    ]
   },
   {
