HARMONY-1649 - Remove HOSS no-op request.

--- a/test/hoss/HOSS_Regression.ipynb
+++ b/test/hoss/HOSS_Regression.ipynb
@@ -335,34 +335,9 @@
    "source": [
     "### HOSS request all variables, no bounding box\n",
     "\n",
-    "If no variables and no bounding box are specified, the entire original granule should be retrieved. (This will run the Variable Subsetter branch of the `sds/variable-subsetter` Docker image, skipping any spatial subsetting portion of the service)\n",
+    "**This request has been migrated to the harmony-regression suite.**\n",
     "\n",
-    "The plotted image should cover the entire Earth (landmasses will be masked)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55c0da12",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if test_is_configured(hoss_info, 'collection'):\n",
-    "    all_no_bbox_file_name = 'hoss_all_no_bbox.nc4'\n",
-    "    all_no_bbox_request = Request(collection=hoss_info['collection'],\n",
-    "                                  granule_id=hoss_info['granule_id'])\n",
-    "\n",
-    "\n",
-    "    submit_and_download(harmony_client, all_no_bbox_request, all_no_bbox_file_name)\n",
-    "    assert exists(all_no_bbox_file_name), 'Unsuccessful HOSS all-variable, no bounding box request.'\n",
-    "\n",
-    "    compare_results_to_reference_file(all_no_bbox_file_name,\n",
-    "                                      'reference_files/hoss_all_no_bbox_reference.nc4',\n",
-    "                                      '/')\n",
-    "\n",
-    "    print_success('HOSS all-variable, no bounding box request.')\n",
-    "else:\n",
-    "    print(f'Skipping - HOSS is not configured for this test in {harmony_environment}.')"
+    "[HARMONY-1649](https://bugs.earthdata.nasa.gov/browse/HARMONY-1649) added a service will return original download links for services that do not explicitly request a transformation in the request parameters. The all-variable, no-bounding-box request will now be routed to that service instead of placing load on HOSS and OPeNDAP."
    ]
   },
   {
@@ -404,7 +379,7 @@
     "\n",
     "\n",
     "    submit_and_download(harmony_client, hoss_temporal_request, hoss_temporal_file_name)\n",
-    "    assert exists(all_no_bbox_file_name), 'Unsuccessful HOSS temporal request.'\n",
+    "    assert exists(hoss_temporal_file_name), 'Unsuccessful HOSS temporal request.'\n",
     "\n",
     "    compare_results_to_reference_file(hoss_temporal_file_name,\n",
     "                                      'reference_files/hoss_temporal_reference.nc4',\n",
