HARMONY-1649 - Add harmony/download test to harmony-regression suite.

--- a/test/harmony-regression/HarmonyRegression.ipynb
+++ b/test/harmony-regression/HarmonyRegression.ipynb
@@ -61,7 +61,10 @@
    "source": [
     "coverages_root = '{root}/{collection}/ogc-api-coverages/1.0.0/collections/{variable}/coverage/rangeset'\n",
     "\n",
-    "is_not_prod = harmony_host_url == 'https://harmony.uat.earthdata.nasa.gov' or harmony_host_url == 'https://harmony.sit.earthdata.nasa.gov' or re.search(\"http:\\/\\/internal-harmony-.*us-west-2\\.elb.amazonaws\\.com\", harmony_host_url)\n",
+    "if harmony_host_url == 'https://harmony.earthdata.nasa.gov':\n",
+    "    is_not_prod = False\n",
+    "else:\n",
+    "    is_not_prod = True\n",
     "\n",
     "if is_not_prod:\n",
     "    l3_collection = 'C1234088182-EEDTEST'\n",
@@ -70,13 +73,46 @@
     "    shapefile_collection = 'C1234530533-EEDTEST'\n",
     "    l2ss_collection = 'C1234208438-POCLOUD'\n",
     "    var_collection = 'C1234714698-EEDTEST'\n",
-    "elif harmony_host_url == 'https://harmony.earthdata.nasa.gov':\n",
+    "    download_collection = 'C1238392622-EEDTEST'\n",
+    "    download_link_substring = 'harmony-uat-eedtest-data'\n",
+    "else:\n",
     "    l3_collection = 'C1756916832-XYZ_PROV'\n",
     "    l3_zarr_collection = 'C1940468263-POCLOUD'\n",
     "    l2_collection = 'C1756916832-XYZ_PROV'\n",
     "    l2ss_collection = 'C1940473819-POCLOUD'\n",
+    "    download_collection = 'C1996546500-GHRC_DAAC'\n",
+    "    download_link_substring = 'data.ghrc.earthdata.nasa.gov'\n",
     "\n",
     "example_vars = ['red_var', 'green_var', 'blue_var', 'alpha_var']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set up Harmony Client\n",
+    "\n",
+    "This is for use with requests, which will eventually replace some of the functionality in `notebook_helpers`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from harmony import Client, Collection, Environment, Request\n",
+    "\n",
+    "host_environment = {'http://localhost:3000': Environment.LOCAL,\n",
+    "                    'https://harmony.sit.earthdata.nasa.gov': Environment.SIT,\n",
+    "                    'https://harmony.uat.earthdata.nasa.gov': Environment.UAT,\n",
+    "                    'https://harmony.earthdata.nasa.gov': Environment.PROD}\n",
+    "\n",
+    "\n",
+    "harmony_environment = host_environment.get(harmony_host_url)\n",
+    "\n",
+    "if harmony_environment is not None:\n",
+    "    harmony_client = Client(env=harmony_environment)"
    ]
   },
   {
@@ -102,14 +138,18 @@
     "        'subset': [\n",
     "            'lon(-20:90)', \n",
     "            'lat(0:60)', \n",
-    "            'time(\"2020-01-15T00:00:00Z\":\"2020-01-15T01:00:00Z\")']\n",
+    "            'time(\"2020-01-15T00:00:00Z\":\"2020-01-15T01:00:00Z\")'\n",
+    "        ]\n",
     "    }\n",
+    "\n",
     "    response = get(\n",
     "        coverages_root.format(\n",
     "            root=harmony_host_url,\n",
-    "            collection=l3_collection, \n",
-    "            variable='all'), \n",
-    "        params=params)\n",
+    "            collection=l3_collection,\n",
+    "            variable='all'\n",
+    "        ),\n",
+    "        params=params\n",
+    "    )\n",
     "\n",
     "    show(response, example_vars)"
    ]
@@ -124,11 +164,13 @@
    "source": [
     "if is_not_prod:\n",
     "    response = get(\n",
-    "    coverages_root.format(\n",
-    "        root=harmony_host_url,\n",
-    "        collection=l3_collection, \n",
-    "        variable='green_var'), \n",
-    "    params=params)\n",
+    "        coverages_root.format(\n",
+    "            root=harmony_host_url,\n",
+    "            collection=l3_collection,\n",
+    "            variable='green_var'\n",
+    "        ),\n",
+    "        params=params\n",
+    "    )\n",
     "\n",
     "    show(response, color_index=1)"
    ]
@@ -155,12 +197,16 @@
     "        coverages_root.format(\n",
     "            root=harmony_host_url,\n",
     "            collection=l3_collection, \n",
-    "            variable='all'), \n",
+    "            variable='all'\n",
+    "        ), \n",
     "        params={\n",
     "            'subset': [\n",
     "                'lon(-20:90)', \n",
     "                'lat(0:60)', \n",
-    "                'time(\"2020-01-01T00:00:00Z\":\"2020-01-05T01:00:00Z\")']})\n",
+    "                'time(\"2020-01-01T00:00:00Z\":\"2020-01-05T01:00:00Z\")'\n",
+    "            ]\n",
+    "        }\n",
+    "    )\n",
     "    show_async_condensed(response)"
    ]
   },
@@ -184,9 +230,20 @@
    "source": [
     "if is_not_prod:\n",
     "    #Add 3 requests\n",
-    "    response1 = get(coverages_root.format(root=harmony_host_url, collection=l3_collection, variable='all'), params={'format': 'image/tiff', 'maxResults': '20'})\n",
-    "    response2 = get(coverages_root.format(root=harmony_host_url, collection=l3_collection, variable='all'), params={'format': 'image/tiff', 'maxResults': '20'})\n",
-    "    response3 = get(coverages_root.format(root=harmony_host_url, collection=l3_collection, variable='all'), params={'format': 'image/tiff', 'maxResults': '20'})\n",
+    "    response1 = get(\n",
+    "        coverages_root.format(root=harmony_host_url, collection=l3_collection, variable='all'),\n",
+    "        params={'format': 'image/tiff', 'maxResults': '20'}\n",
+    "    )\n",
+    "\n",
+    "    response2 = get(\n",
+    "        coverages_root.format(root=harmony_host_url, collection=l3_collection, variable='all'),\n",
+    "        params={'format': 'image/tiff', 'maxResults': '20'}\n",
+    "    )\n",
+    "\n",
+    "    response3 = get(\n",
+    "        coverages_root.format(root=harmony_host_url, collection=l3_collection, variable='all'),\n",
+    "        params={'format': 'image/tiff', 'maxResults': '20'}\n",
+    "    )\n",
     "\n",
     "    #List the requests\n",
     "\n",
@@ -229,18 +286,20 @@
    },
    "outputs": [],
    "source": [
-    "response = get(\n",
+    "zarr_response = get(\n",
     "    coverages_root.format(\n",
     "        root=harmony_host_url,\n",
     "        collection=l3_zarr_collection, \n",
-    "        variable='all'), \n",
+    "        variable='all'\n",
+    "    ), \n",
     "    params={\n",
     "        'subset': 'time(\"2020-01-15T00:00:00Z\":\"2020-01-16T01:00:00Z\")',\n",
     "        'maxResults': '3'\n",
-    "        },\n",
-    "    headers = {'accept': 'application/x-zarr'})\n",
+    "    },\n",
+    "    headers = {'accept': 'application/x-zarr'}\n",
+    ")\n",
     "\n",
-    "zarr_response = show_async(response)"
+    "show_async(zarr_response)"
    ]
   },
   {
@@ -262,7 +321,11 @@
     "\n",
     "stac_root = '{root}/stac/{jobID}/{item}'\n",
     "\n",
-    "stac_cat = intake.open_stac_catalog(stac_root.format(root=harmony_host_url,jobID=job,item=''),name='Harmony output')\n",
+    "stac_cat = intake.open_stac_catalog(\n",
+    "    stac_root.format(root=harmony_host_url, jobID=job, item=''),\n",
+    "    name='Harmony output'\n",
+    ")\n",
+    "\n",
     "display(list(stac_cat))"
    ]
   },
@@ -306,12 +369,17 @@
    "source": [
     "### Data Services:\n",
     "\n",
-    "The following services are tested in the `SDS_Regression.ipynb` Jupyter notebook:\n",
+    "The following services are tested in service-specific Jupyter notebooks:\n",
     "\n",
-    "* Swath Projector (a.k.a. \"SWOT Reprojection Tool\").\n",
-    "* MaskFill.\n",
-    "* Variable Subsetter.\n",
-    "* Harmony OPeNDAP SubSetter (HOSS)."
+    "* Geoloco\n",
+    "* Harmony Browse Image Generator (HyBIG)\n",
+    "* Harmony GDAL Adapter (HGA)\n",
+    "* Harmony OPeNDAP SubSetter (HOSS)\n",
+    "* Harmony Regridding Service\n",
+    "* NetCDF-to-Zarr\n",
+    "* Swath Projector\n",
+    "* Trajectory Subsetter\n",
+    "* Variable Subsetter"
    ]
   },
   {
@@ -340,14 +408,17 @@
     "    coverages_root.format(\n",
     "        root=harmony_host_url,\n",
     "        collection=l2ss_collection, \n",
-    "        variable='all'), \n",
+    "        variable='all'\n",
+    "    ), \n",
     "    params={\n",
     "        'maxResults': '1',\n",
     "        'subset': [\n",
     "           'lon(-160:160)', \n",
     "           'lat(-80:80)',\n",
-    "           'time(\"2012-03-03T12:17:00\":\"2012-03-03T12:18:00\")']\n",
-    "        })\n",
+    "           'time(\"2012-03-03T12:17:00\":\"2012-03-03T12:18:00\")'\n",
+    "        ]\n",
+    "    }\n",
+    ")\n",
     "\n",
     "if is_not_prod:\n",
     "    show(response, ['ssha'])\n",
@@ -374,7 +445,8 @@
     "    coverages_root.format(\n",
     "        root=harmony_host_url,\n",
     "        collection=l2ss_collection, \n",
-    "        variable='all'), \n",
+    "        variable='all'\n",
+    "    ), \n",
     "    params={\n",
     "        'maxResults': '3',\n",
     "        'format': 'application/x-netcdf4',\n",
@@ -382,12 +454,44 @@
     "            'lon(-160:160)', \n",
     "            'lat(-80:80)',\n",
     "             'time(\"2012-03-03T00:00:00Z\":\"2012-03-03T02:59:59Z\")'\n",
-    "            ]})\n",
+    "        ]\n",
+    "    }\n",
+    ")\n",
     "\n",
     "if is_not_prod:\n",
     "    show_async_condensed(response, ['ssha'])\n",
     "else:\n",
     "    show_async_condensed(response, ['sea_surface_temperature'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## harmony/download service\n",
+    "\n",
+    "[HARMONY-1649](https://bugs.earthdata.nasa.gov/browse/HARMONY-1649) added the `harmony/download` service, which will be called when no transformation is specified in the request parameters (e.g., subsetting, reformatting, reprojections).\n",
+    "\n",
+    "The request below establishes that the service is used, rather than one of the other Harmony backend services. Because there is nothing in the `/jobs` output indicating the service that was used, this test asserts that at least one of the output links from Harmony contains a substring that is tied to the original source data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "download_service_request = Request(collection=Collection(download_collection),\n",
+    "                                   max_results=1)\n",
+    "\n",
+    "download_service_job_id = harmony_client.submit(download_service_request)\n",
+    "download_service_json = harmony_client.result_json(download_service_job_id)\n",
+    "\n",
+    "assert any(\n",
+    "    download_link_substring in link['href']\n",
+    "    for link in download_service_json.get('links')\n",
+    "    if link['rel'] == 'data'\n",
+    "), 'Download service did not return expected link.'"
    ]
   },
   {
@@ -402,7 +506,7 @@
   "celltoolbar": "Tags",
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -416,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.13"
   },
   "mimetype": "text/x-python",
   "name": "python",
